--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,10 @@
     width: 50%;
     height: 50%;
 }
-
+#plots{
+    margin-left: 10%;
+    width: 80%;
+}
 .hide{
     display:none;
 }
@@ -12,6 +15,7 @@
 body{
     padding: 0;
     margin: 0;
+    width: 100%;
     background-image: radial-gradient(rgb(161, 154, 154),rgb(243, 220, 220));
 }
 .body{
@@ -120,7 +124,8 @@ ul{
 .nav{
     width: 100%;
     height: 20%;
-    background-color: black;
+    background-image: url("../imgs/banner.png");
+    background-size:contain;
 }
 
 .logo:hover{
