--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url(./fonts.css);
+@import url(./keyframes.css);
 body {
   font-family: 'Imprima', sans-serif;
 }
@@ -40,6 +41,7 @@ body{
 .input{
     top:15%;
     width: 50%;
+    font-family: 'Digital-7';
 }
 .Box{
     top: 60%;
@@ -67,7 +69,7 @@ body{
     margin-left: 10%;
 }
 #output2{
-    margin-left: 10%;
+    margin-left: 5%;
 }
 #output1,#output2{
     margin-top: 20%;
@@ -77,8 +79,16 @@ body{
 }
 
 .but{
-    top: 45%;
+    top: 41%;
     z-index: 4;
+    background-color: black;
+    color: whitesmoke;
+    font-family: 'Supermercado One';
+    width: 10%;
+    height: 5%;
+    border-radius: 3%;
+    font-size: 17px;
+    border: 1px solid bisque;
 }
 
 #datetime{
@@ -88,29 +98,39 @@ body{
     transform: translate(-50%,-50%);
     gap: 2%;
     margin: 2%;
-    background-color: black;
-    box-shadow: 1px 1px 1px rgb(48, 47, 47);
+    background-color: rgb(23, 0, 116);
+    box-shadow: 1px 1px 1px rgb(12, 12, 12);
     padding: 1%;
-    border-radius: 20%;
+    border-radius: 7%;
     font-size: 30px;
     margin-left: 48.5%;
     top:82%;
     font-family: Digital-7;
     z-index: 3;
+    color: green;
+    text-align: center;
+    border: 2px solid bisque;
+    text-shadow: 1px 1px 1px lightgreen;
 }
 .logo{
     width: 100px;
     height: 100px;
     position: absolute;
     left: 10%;
+    top: 3%;
     filter: drop-shadow(3px 3px 3px rgb(1, 20, 20));
-    animation: spinMatrix 2s linear infinite;
+    animation: spinMatrixY 2s linear infinite;
 }
 a{ 
     text-decoration: none;
     color: aliceblue;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Supermercado One';
     font-size: 30px;
+    text-shadow: 2px 2px 12px rgb(197, 184, 184);
+
+}
+a:hover{
+    text-shadow: 2px 2px 12px rgb(7, 7, 7);
 }
 li{
     list-style: none;
@@ -138,29 +158,10 @@ ul{
 }
 
 .logo:hover{
-    filter: drop-shadow(2px 2px 2px gold);
-    transform: rotateY(90deg);
+    animation: spinMatrixX 2s linear infinite;
     
  }
  .input{
      font-size:20px;
  }
 
- @keyframes spinMatrix {
-    0% { 
-        transform: rotateY(0deg);
-        filter: drop-shadow(2px 2px 5px rgb(236, 8, 46));
-    }
-    50% { 
-        transform: rotateY(180deg);
-        filter: drop-shadow(2px 2px 5px rgb(0, 255, 0));
-    }
-    100% { 
-        transform: rotateY(360deg); 
-        filter: drop-shadow(2px 2px 2px rgb(23, 44, 112));
-    }
-  }
-  .platform *, .platform  *:before, .platform *:after {
-    transform-style: preserve-3d;
-    transform-origin: center center;
-  }
